QA Project/Force/force-app/main/default/objects/Invoice__c/fields/Expense_After_Tax__c.field-meta.xml
<CustomField>
    <fullName>Expense_After_Tax__c</fullName>
    <formula>Expense_Sub_Total__c  -  Expense_Tax__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Expense After Tax</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>