QA Project/Force/force-app/main/default/objects/Invoice__c/fields/Expense_Invoice_Number__c.field-meta.xml
<CustomField>
    <fullName>Expense_Invoice_Number__c</fullName>
    <label>Expense Invoice Number</label>
    <precision>10</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>