QA Project/Force/force-app/main/default/objects/Invoice__c/fields/Expense_Sub_Total__c.field-meta.xml
<CustomField>
    <fullName>Expense_Sub_Total__c</fullName>
    <formula>Test__c   +   VAT__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Expense Sub Total</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>