QA Project/Force/force-app/main/default/objects/Invoice__c/fields/Invoice_Number__c.field-meta.xml
<CustomField>
    <fullName>Invoice_Number__c</fullName>
    <defaultValue>&quot;INVNO&quot;</defaultValue>
    <label>Invoice Number</label>
    <length>12</length>
    <type>Text</type>
</CustomField>