QA Project/Force/force-app/main/default/objects/Invoice__c/fields/Service_Tax__c.field-meta.xml
<CustomField>
    <fullName>Service_Tax__c</fullName>
    <formula>Service_VAT_Amount__c  *  Tax_Rate__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Service Tax</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>