QA Project/Force/force-app/main/default/objects/Invoice__c/fields/Service_VAT__c.field-meta.xml
<CustomField>
    <fullName>Service_VAT__c</fullName>
    <description>The formula is calculating the amount of VAT that needs to be added to the service fee.</description>
    <formula>Service_Fee__c  *  VAT_Rate__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Service VAT</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>