QA Project/Force/force-app/main/default/objects/Invoice__c/fields/Service_VAT_Amount__c.field-meta.xml
<CustomField>
    <fullName>Service_VAT_Amount__c</fullName>
    <formula>Service_Fee__c  +  Service_VAT__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Service VAT Amount</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>