QA Project/Force/force-app/main/default/objects/Invoice__c/fields/Test__c.field-meta.xml
<CustomField>
    <fullName>Test__c</fullName>
    <label>Test</label>
    <summarizedField>Invoice_Line_Item__c.Amount__c</summarizedField>
    <summaryForeignKey>Invoice_Line_Item__c.Invoice_Line_Item__c</summaryForeignKey>
    <summaryOperation>sum</summaryOperation>
    <type>Summary</type>
</CustomField>