QA Project/Force/force-app/main/default/objects/Invoice__c/fields/test_tax_rate_service__c.field-meta.xml
<CustomField>
    <fullName>test_tax_rate_service__c</fullName>
    <formula>Course__r.Test__c  *  Tax_Rate__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Test tax rate service</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>