QA Project/Force/force-app/main/default/objects/Invoice__c/fields/Total_Service_Amount__c.field-meta.xml
<CustomField>
    <fullName>Total_Service_Amount__c</fullName>
    <formula>Service_VAT_Amount__c  -   Service_Tax__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Total Service Amount</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>