QA Project/Force/force-app/main/default/objects/Invoice__c/validationRules/Future_Paid_Date.validationRule-meta.xml
<ValidationRule>
    <fullName>Future_Paid_Date</fullName>
    <active>true</active>
    <errorConditionFormula>Paid_Date__c  &gt;  TODAY()</errorConditionFormula>
    <errorMessage>Pay date cannot be a date in the future</errorMessage>
</ValidationRule>