QA Project/Force/force-app/main/default/objects/Invoice__c/validationRules/Paid_Date_Required.validationRule-meta.xml
<ValidationRule>
    <fullName>Paid_Date_Required</fullName>
    <active>true</active>
    <errorConditionFormula>ISPICKVAL( Status__c , &quot;Paid&quot;)  &amp;&amp;  ISBLANK( Paid_Date__c )</errorConditionFormula>
    <errorMessage>Please Enter a pay date</errorMessage>
</ValidationRule>