QA Project/Force/force-app/main/default/objects/Invoice__c/validationRules/Submitted_Date.validationRule-meta.xml
<ValidationRule>
    <fullName>Submitted_Date</fullName>
    <active>true</active>
    <errorConditionFormula>Submitted_Date__c  &gt;  TODAY()</errorConditionFormula>
    <errorMessage>Please Enter a date that is in the past</errorMessage>
</ValidationRule>