QA Project/Force/force-app/main/default/objects/Invoice__c/validationRules/Submitted_Date_Required.validationRule-meta.xml
<ValidationRule>
    <fullName>Submitted_Date_Required</fullName>
    <active>true</active>
    <errorConditionFormula>ISPICKVAL( Status__c , &quot;Submitted&quot;)  &amp;&amp;  ISBLANK( Submitted_Date__c )</errorConditionFormula>
    <errorMessage>Please input a submitted date</errorMessage>
</ValidationRule>