QA Project/Force/force-app/main/default/objects/Invoice__c/validationRules/Tax.validationRule-meta.xml
<ValidationRule>
    <fullName>Tax</fullName>
    <active>true</active>
    <errorConditionFormula>Tax_Rate__c &lt; 0.1  ||  Tax_Rate__c  &gt; 1</errorConditionFormula>
    <errorDisplayField>Tax_Rate__c</errorDisplayField>
    <errorMessage>The tax rate cannot be above 100% or be below 0. Please enter the correct tax percentage.</errorMessage>
</ValidationRule>