QA Project/Force/force-app/main/default/objects/Invoice__c/validationRules/Vat.validationRule-meta.xml
<ValidationRule>
    <fullName>Vat</fullName>
    <active>true</active>
    <errorConditionFormula>VAT_Rate__c &lt; 0.1  ||  VAT_Rate__c &gt; 1</errorConditionFormula>
    <errorDisplayField>VAT_Rate__c</errorDisplayField>
    <errorMessage>VAT rate cannot be above 100% or be below 0. Please enter the correct VAT rate.</errorMessage>
</ValidationRule>